# code2context

./: .gitignore  LICENSE  README.md  pyproject.toml
src/code2context/: cli.py
